[package]
name = "terminus-store"
version = "0.12.2"
authors = ["Matthijs van Otterdijk <matthijs@datachemist.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "a triple store library"
homepage = "https://terminusdb.com"
repository = "https://github.com/terminusdb/terminus-store/"
documentation = "https://docs.rs/terminus-store/"

[dependencies]
byteorder = "1.3.2"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
futures = "0.3"
futures-locks = "0.6"
bytes = "0.5"
rand = "0.7"
lazy_static = "1.4"
fs2 = "0.4.3"
tar = "0.4"
flate2 = "1.0"
rayon = "1.4"

[dev-dependencies]
tempfile = "3.1"
